# serde_path

./: Cargo.toml  README.txt
src/: error.rs  lib.rs  ser.rs
