[package]
name = "serde_path"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
either = { version = "1.6", features = ["serde"] }
uuid = { version = "1.10", features = ["serde"] }
